Fix button sizes on mobile homepage

--- a/cmgm/styles/Home/mobile.css
+++ b/cmgm/styles/Home/mobile.css
@@ -13,26 +13,26 @@
   font-size: 1.83em;
 }
 .w-100{width:100%!important}
-.w-95{width:95%!important}
-.w-90{width:90%!important}
-.w-85{width:85%!important}
-.w-80{width:80%!important}
-.w-75{width:75%!important}
-.w-70{width:75%!important}
-.w-65{width:65%!important}
-.w-60{width:60%!important}
-.w-55{width:55%!important}
-.w-50{width:50%!important}
-.w-45{width:45%!important}
-.w-40{width:40%!important}
-.w-35{width:35%!important}
-.w-33{width:33.33333%!important}
-.w-30{width:30%!important}
-.w-25{width:25%!important}
-.w-20{width:20%!important}
-.w-15{width:15%!important}
-.w-10{width:10%!important}
-.w-5{width:5%!important}
+.w-095{width:95%!important}
+.w-090{width:90%!important}
+.w-085{width:85%!important}
+.w-080{width:80%!important}
+.w-075{width:75%!important}
+.w-070{width:75%!important}
+.w-065{width:65%!important}
+.w-060{width:60%!important}
+.w-055{width:55%!important}
+.w-050{width:50%!important}
+.w-045{width:45%!important}
+.w-040{width:40%!important}
+.w-035{width:35%!important}
+.w-033{width:33.33333%!important}
+.w-030{width:30%!important}
+.w-025{width:25%!important}
+.w-020{width:20%!important}
+.w-015{width:15%!important}
+.w-010{width:10%!important}
+.w-005{width:5%!important}
 
 .w-25-l {width: 25%;max-width: 100%;}
 .w-37-5 {width: 37.5%;max-width: 100%;}
